[gd_scene load_steps=9 format=3 uid="uid://wetdngwds2wm"]

[ext_resource type="Script" path="res://powerups/player_explosion.gd" id="1_b30m3"]
[ext_resource type="PackedScene" uid="uid://3vgwxajepk8e" path="res://core/paddle.tscn" id="2_2pxes"]
[ext_resource type="AudioStream" uid="uid://b3tnxhqv6oc0v" path="res://addons/kenney_impact_sounds/footstep_snow_000.ogg" id="2_din4o"]
[ext_resource type="AudioStream" uid="uid://b5gv01v7d43wt" path="res://addons/kenney_impact_sounds/footstep_snow_001.ogg" id="3_66ufx"]
[ext_resource type="AudioStream" uid="uid://buo0wcxoag1j8" path="res://addons/kenney_impact_sounds/footstep_snow_002.ogg" id="4_vga8c"]
[ext_resource type="AudioStream" uid="uid://bqkng22gerq0s" path="res://addons/kenney_impact_sounds/footstep_snow_003.ogg" id="5_q8piq"]
[ext_resource type="AudioStream" uid="uid://bfjqj626g6wsh" path="res://addons/kenney_impact_sounds/footstep_snow_004.ogg" id="6_4pnvk"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ib3yq"]
streams_count = 5
stream_0/stream = ExtResource("2_din4o")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_66ufx")
stream_1/weight = 1.0
stream_2/stream = ExtResource("4_vga8c")
stream_2/weight = 1.0
stream_3/stream = ExtResource("5_q8piq")
stream_3/weight = 1.0
stream_4/stream = ExtResource("6_4pnvk")
stream_4/weight = 1.0

[node name="PlayerExplosion" type="Node2D"]
script = ExtResource("1_b30m3")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ib3yq")

[node name="Paddle1" parent="." instance=ExtResource("2_2pxes")]
position = Vector2(5, -50)

[node name="Paddle2" parent="." instance=ExtResource("2_2pxes")]
position = Vector2(-5, -50)

[node name="Paddle3" parent="." instance=ExtResource("2_2pxes")]
position = Vector2(-5, 50)

[node name="Paddle4" parent="." instance=ExtResource("2_2pxes")]
position = Vector2(5, 50)
